--- a/gb/20/3/5/n11918460.md
+++ b/gb/20/3/5/n11918460.md
@@ -1,25 +1,26 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gcmla295/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gcmla295/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/gcmla295/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gcmla295/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/gcmla295/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gcmla295/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/gcmla295/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gcmla295/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/gcmla295/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gcmla295/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/gcmla295/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gcmla295/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/gcmla295/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gcmla295/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/gcmla295/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gcmla295/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/gcmla295/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/gcmla295/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/gcmla295/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/gcmla295/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/gcmla295/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/gcmla295/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>1个武汉肺炎病人需多少资源？你不知的医疗消耗战</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/03/5-covid-19-disease-medical-isolation-gown-600x400.jpg" />
 <h6>一个人从疑似病例到确诊住院，再到治愈出院，需消耗多少医疗资源？ (STR/AFP via Getty Images)
 </h6>
 <hr>
 <p>武汉肺炎正肆虐全球，目前在中国以外已有逾80个国家出现新冠病毒感染案例，不仅对经济造成打击，也考验一个国家的医疗量能。</p>
-<p>上万名武汉肺炎患者已造成中国医疗体系崩溃，<a href="https://github.com/gcmla295/djy/blob/master/gb/tag/%E9%98%B2%E6%8A%A4%E8%A1%A3.md">防护衣</a>、<a href="https://github.com/gcmla295/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md">口罩</a>、病床等相关医疗资源严重短缺。而确诊人数超过6千人、成全球第2严重疫区的韩国，其重灾区大邱也面临病床不足的问题，上千名确诊患者无法住院，只能在家隔离。</p>
+<p>上万名武汉肺炎患者已造成中国医疗体系崩溃，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%98%B2%E6%8A%A4%E8%A1%A3.md#1">防护衣</a>、<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md#1">口罩</a>、病床等相关医疗资源严重短缺。而确诊人数超过6千人、成全球第2严重疫区的韩国，其重灾区大邱也面临病床不足的问题，上千名确诊患者无法住院，只能在家隔离。</p>
 <p>究竟，一个人从疑似病例到确诊住院，再到治愈出院，需消耗多少医疗资源？</p>
 <h2><span style="color: #188638;">疑似病患采检一次</span><span style="color: #188638;">　</span><span style="color: #188638;">需7个人力、7套装备</span></h2>
 <p>台湾在2003年经历过SARS教训之后，便在医院外设置发烧筛检站，找出疑似患者并隔离。振兴医院急诊科医师蔡贤龙介绍，当发烧筛检站出现疑似患者后，先由1名放射师拍摄胸部X光，如果X光呈现肺炎，就必须通报和住院隔离。</p>
 <p>接下来，病人会被带到负压隔离室，由1名医师、1名护士进行采检。采检完成后，还需要有1名护士在负压隔离室外面接检体。</p>
 <p>随后，病人再由1名护士、1名传送员带着，经由特殊通道到病房住院。最后，1名清洁人员到负压隔离室进行打扫消毒。</p>
-<p>采检期间需要的人力与<a href="https://github.com/gcmla295/djy/blob/master/gb/tag/%E5%8C%BB%E7%96%97%E8%A3%85%E5%A4%87.md">医疗装备</a>有：</p>
-<figure id="attachment_11919262" style="width: 600px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/03/covid-19-medical-resourse-2.jpg"><img class="size-large wp-image-11919262" src="https://i.epochtimes.com/assets/uploads/2020/03/covid-19-medical-resourse-2-600x580.jpg" alt="武汉肺炎疑似病例采检一次，需要多少医护人力和医疗装备？（大纪元制图）" width="600" b="580" /></a><figcaption class="wp-caption-text">武汉肺炎疑似病例采检一次，需要多少医护人力和<a href="https://github.com/gcmla295/djy/blob/master/gb/tag/%E5%8C%BB%E7%96%97%E8%A3%85%E5%A4%87.md">医疗装备</a>？（大纪元制图）</figcaption></figure>
-<p>标准的全套防护装备包括：连身型<a href="https://github.com/gcmla295/djy/blob/master/gb/tag/%E9%98%B2%E6%8A%A4%E8%A1%A3.md">防护衣</a> 1件、防水<a href="https://github.com/gcmla295/djy/blob/master/gb/tag/%E9%9A%94%E7%A6%BB%E8%A1%A3.md">隔离衣</a> 1件、双层<a href="https://github.com/gcmla295/djy/blob/master/gb/tag/%E6%89%8B%E5%A5%97.md">手套</a>、N95<a href="https://github.com/gcmla295/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md">口罩</a> 1副，防护面罩或护目镜择一。连身型防护衣外再加一层防水隔离衣是为了作双层保护。发帽与鞋套可戴可不戴。</p>
-<p>连身型防护衣与防水<a href="https://github.com/gcmla295/djy/blob/master/gb/tag/%E9%9A%94%E7%A6%BB%E8%A1%A3.md">隔离衣</a>的差异在于，前者等级比较高，额外要求抗拉强力、撕裂强力、缝合强力等性能。防护衣为白色，被称为“兔宝宝装”，可从头部包覆到鞋子，缺点是透湿性及透气性差，不耐久穿也不易穿脱。</p>
-<p>蔡贤龙表示，与病人有直接接触的医疗人员，均穿着全套装备。而运送检体的人，因没有直接接触病人，只是接医护人员递出来的检体，视每家医院规定，防护层级会不一样。有些医院要求全套装备，或是穿隔离衣 1件、双层<a href="https://github.com/gcmla295/djy/blob/master/gb/tag/%E6%89%8B%E5%A5%97.md">手套</a>、N95口罩 1副，防护面罩（或护目镜）等基本装备，唯一差别是没有连身型防护衣。</p>
+<p>采检期间需要的人力与<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8C%BB%E7%96%97%E8%A3%85%E5%A4%87.md#1">医疗装备</a>有：</p>
+<figure id="attachment_11919262" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/03/covid-19-medical-resourse-2.jpg"><img class="size-large wp-image-11919262" src="https://i.epochtimes.com/assets/uploads/2020/03/covid-19-medical-resourse-2-600x580.jpg" alt="武汉肺炎疑似病例采检一次，需要多少医护人力和医疗装备？（大纪元制图）" width="600" b="580" /></a><figcaption class="wp-caption-text">武汉肺炎疑似病例采检一次，需要多少医护人力和<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8C%BB%E7%96%97%E8%A3%85%E5%A4%87.md#1">医疗装备</a>？（大纪元制图）</figcaption></figure>
+<p>标准的全套防护装备包括：连身型<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%98%B2%E6%8A%A4%E8%A1%A3.md#1">防护衣</a> 1件、防水<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%9A%94%E7%A6%BB%E8%A1%A3.md#1">隔离衣</a> 1件、双层<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%89%8B%E5%A5%97.md#1">手套</a>、N95<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md#1">口罩</a> 1副，防护面罩或护目镜择一。连身型防护衣外再加一层防水隔离衣是为了作双层保护。发帽与鞋套可戴可不戴。</p>
+<p>连身型防护衣与防水<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%9A%94%E7%A6%BB%E8%A1%A3.md#1">隔离衣</a>的差异在于，前者等级比较高，额外要求抗拉强力、撕裂强力、缝合强力等性能。防护衣为白色，被称为“兔宝宝装”，可从头部包覆到鞋子，缺点是透湿性及透气性差，不耐久穿也不易穿脱。</p>
+<p>蔡贤龙表示，与病人有直接接触的医疗人员，均穿着全套装备。而运送检体的人，因没有直接接触病人，只是接医护人员递出来的检体，视每家医院规定，防护层级会不一样。有些医院要求全套装备，或是穿隔离衣 1件、双层<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%89%8B%E5%A5%97.md#1">手套</a>、N95口罩 1副，防护面罩（或护目镜）等基本装备，唯一差别是没有连身型防护衣。</p>
 <p>乳胶手套一次要戴双层，但整个过程会用掉3双手套。这是因为脱下装备的时候，也会用掉一双手套。蔡贤龙解释，脱除装备的标准步骤是，双层手套全部脱完，脱到最后只剩N95口罩时，因不能用手去接触口罩，必须戴一双新手套去脱N95口罩，再脱掉手套。</p>
-<figure id="attachment_11919351" style="width: 600px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/03/covid-19-disease-medical-isolation-gown.jpg"><img class="size-large wp-image-11919351" src="https://i.epochtimes.com/assets/uploads/2020/03/covid-19-disease-medical-isolation-gown-600x800.jpg" alt="标准的全套防护装备包括：连身型防护衣 1件、防水隔离衣 1件、双层手套、N95口罩 1副，防护面罩或护目镜择一。连身型防护衣外再加一层防水隔离衣是为了作双层保护。（急诊医师蔡贤龙提供）" width="600" b="800" /></a><figcaption class="wp-caption-text">标准的全套防护装备包括：连身型防护衣 1件、防水隔离衣 1件、双层手套、N95口罩 1副，防护面罩或护目镜择一。连身型防护衣外再加一层防水隔离衣是为了作双层保护。（急诊医师蔡贤龙提供）</figcaption></figure>
+<p>不仅如此，蔡贤龙指出，每采检一个新的疑似病人，最好换一套装备，避免把病毒传给可能未被感染的疑似患者。</p>
+<figure id="attachment_11919351" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/03/covid-19-disease-medical-isolation-gown.jpg"><img class="size-large wp-image-11919351" src="https://i.epochtimes.com/assets/uploads/2020/03/covid-19-disease-medical-isolation-gown-600x800.jpg" alt="标准的全套防护装备包括：连身型防护衣 1件、防水隔离衣 1件、双层手套、N95口罩 1副，防护面罩或护目镜择一。连身型防护衣外再加一层防水隔离衣是为了作双层保护。（急诊医师蔡贤龙提供）" width="600" b="800" /></a><figcaption class="wp-caption-text">标准的全套防护装备包括：连身型防护衣 1件、防水隔离衣 1件、双层手套、N95口罩 1副，防护面罩或护目镜择一。连身型防护衣外再加一层防水隔离衣是为了作双层保护。（急诊医师蔡贤龙提供）</figcaption></figure>
 <p>台湾中央流行疫情指挥中心将“旅游疫情建议等级”分为：第一级“注意”（Watch）、第二级“警示”（Alert）、第三级“警告”（Warning），第三级代表当地疫情严重，如中港澳、意大利、韩国。但无论是哪一级，只要是怀疑的个案，医护人员都会着全套防护装备，全副武装去采检。</p>
 <h2><span style="color: #188638;">负压隔离病房与一般隔离病房的差异</span></h2>
 <p>病人会被分为高危险、中危险、低危险，采检完后依危险程度分配隔离病房种类。</p>
@@ -32,7 +33,7 @@
 <h2><span style="color: #188638;">1名患者隔离一天　医护至少需10套全套装备</span></h2>
 <p>病人住院隔离期间，采检结果需等待3天，若为阴性只要隔离3天便可离开，阳性则视病情而定。台湾第一例确诊武汉肺炎患者住院16天才解除隔离。</p>
 <p>在隔离病房期间，为了节省医疗资源，通常采一对一照顾。1位病人在隔离治疗的过程中，需要的人力与医疗资源有：</p>
-<figure id="attachment_11919260" style="width: 600px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/03/covid-19-medical-resourse3.jpg"><img class="wp-image-11919260 size-large" src="https://i.epochtimes.com/assets/uploads/2020/03/covid-19-medical-resourse3-600x580.jpg" alt="1位新冠病毒患者在隔离治疗的过程中，需要的人力与医疗资源。（大纪元制图）" width="600" b="580" /></a><figcaption class="wp-caption-text">1位武汉肺炎患者在隔离治疗的过程中，需要的人力与医疗资源。（大纪元制图）</figcaption></figure>
+<figure id="attachment_11919260" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/03/covid-19-medical-resourse3.jpg"><img class="wp-image-11919260 size-large" src="https://i.epochtimes.com/assets/uploads/2020/03/covid-19-medical-resourse3-600x580.jpg" alt="1位新冠病毒患者在隔离治疗的过程中，需要的人力与医疗资源。（大纪元制图）" width="600" b="580" /></a><figcaption class="wp-caption-text">1位武汉肺炎患者在隔离治疗的过程中，需要的人力与医疗资源。（大纪元制图）</figcaption></figure>
 <p>蔡贤龙指出，这是在一般没有任何状况下， 一天所需的数量。当病患情况稳定时，医师可通过视讯间接跟病患问诊，借此省下一套衣服。因为若不需触摸对方、不做侵入性治疗，不会为了进去而多浪费一套防护装备。</p>
 <p>在一般隔离病房、负压隔离病房里，医护人员有需要才着装进去。若是在加护病房里，因患者病情不稳定，医师和护士可能就一直穿全套装备待在里面，用餐、如厕再出来，但一天同样都是用2～3套。</p>
 <p>一班护士通常分配2～3套装备，以便脱下装备进食、上厕所，再穿一套新的装备。在资源宽裕的情况之下，1人一班至少用3～4套，1天三班会用掉9～12套。病人较多的时候，1天消耗掉50套都有可能。</p>
@@ -42,48 +43,54 @@
 <p>蔡贤龙强调，通常来说，短时间内要生产大量医护装备是不可能的，必须有政府的努力和各家厂商的协助帮忙。</p>
 <p>在防疫作战中，站在第一线的医护人员拥有充足的装备是关键。</p>
 <p>如果医疗装备缺乏，医护人员就容易被感染，进而减少人力，使原本能做的事情不断延后或造成病人等待时间越来越久。被感染的医护人员甚至会在不知情的状况下，传染给其他病患或家属，家属再传染给医院与院外的其他人，“这将是很可怕的事情”，蔡贤龙说。</p>
-<p>浏览<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/gcmla295/djy/blob/master/gb/nsc1002.md" target="_blank" rel="noopener noreferrer">大纪元健康1+1频道</a></span></span>，了解更多健康知识！</p>
-<h3>热点专题：<span style="color: #188638;"><a style="color: #188638;" href="https://github.com/gcmla295/djy/blob/master/gb/nf1363956.md" target="_blank" rel="noopener noreferrer">对抗新冠病毒！实用自保方法</a></span></h3>
-<p><a href="https://github.com/gcmla295/djy/blob/master/gb/nf1363956.md" target="_blank" rel="noopener noreferrer"><img class="alignnone wp-image-11862447" src="https://i.epochtimes.com/assets/uploads/2020/02/small-image_2019n-cov.jpg" alt="（大纪元制图）" width="250" b="125" /></a></p>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/gcmla295/djy/blob/master/gb/20/2/27/n11899583.md" target="_blank" rel="noopener noreferrer">【一线采访】援鄂医师：疫情比SARS严重</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/gcmla295/djy/blob/master/gb/20/3/4/n11913599.md" target="_blank" rel="noopener noreferrer">这类患者是院内感染漏洞 进医院注意2点防传染</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/gcmla295/djy/blob/master/gb/20/2/5/n11846752.md" target="_blank" rel="noopener noreferrer">带呼吸阀的N95安全吗？1图看懂N系口罩差别</a></span></h3>
+<p>浏览<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1" target="_blank" rel="noopener noreferrer">大纪元健康1+1频道</a></span></span>，了解更多健康知识！</p>
+<h3>热点专题：<span style="color: #188638;"><a style="color: #188638;" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1363956.md#1" target="_blank" rel="noopener noreferrer">对抗新冠病毒！实用自保方法</a></span></h3>
+<p><ahref="https://github.com/tjvrql262/djy/blob/master/gb/nf1363956.md#1" target="_blank" rel="noopener noreferrer"><img class="alignnone wp-image-11862447" src="https://i.epochtimes.com/assets/uploads/2020/02/small-image_2019n-cov.jpg" alt="（大纪元制图）" width="250" b="125" /></a></p>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/tjvrql262/djy/blob/master/gb/20/2/27/n11899583.md#1" target="_blank" rel="noopener noreferrer">【一线采访】援鄂医师：疫情比SARS严重</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/tjvrql262/djy/blob/master/gb/20/3/4/n11913599.md#1" target="_blank" rel="noopener noreferrer">这类患者是院内感染漏洞 进医院注意2点防传染</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/tjvrql262/djy/blob/master/gb/20/2/5/n11846752.md#1" target="_blank" rel="noopener noreferrer">带呼吸阀的N95安全吗？1图看懂N系口罩差别</a></span></h3>
 <p>责任编辑：李清风</p>
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/3/5/n11918460.htm">1个武汉肺炎病人需多少资源？你不知的医疗消耗战</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11915640.htm">【内幕】强令复工风险大 长春公文泄真相</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/5/n11916903.htm">李文亮被追授“先进” 网民：先公布调查结果</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/5/n11915907.htm">当社区感染出现后 做到这四件事很重要</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11913397.htm">【十字路口】中共被揭造假疫情 蝗虫大军复活</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/27/n11901418.htm">【独家】辽宁卫健委下令销毁新冠疫情文件</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/1/n11837622.htm">家人传染如何防？抗武汉肺炎 居家隔离这样做</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11890652.htm">【更新】韩国夜增400多确诊 中共官员作秀遭骂</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/5/n11916833.htm">孙春兰视察武汉小区 居民怒吼：全是假的</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11915322.htm">出院者频复发 武汉方舱医院暂停出院手续</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11915146.htm">【新闻看点】疫情危机刚开始？习近平五大短板</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11902923.htm">犹太拉比谈武汉肺炎：弥赛亚现身前十灾重演</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11908043.htm">子丑之年江边起──预言中的“大瘟疫”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11902013.htm">《推背图》56象与互卦 预言中共剥烂</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882963.htm">【爱丽话五千】以干支纪年法推算 庚子年大事多</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11913421.htm">台湾抗疫登上美医学杂志 专家：他国典范</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11913682.htm">迅速应变保护公民利益 台湾防疫经验登权威期刊</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11913352.htm">《大国战疫》引民愤 北京市民举报王沪宁</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11912589.htm">【新闻看点】中共控网严厉 媒体噤声代价惨重</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11913399.htm">【拍案惊奇】俄华人谈防疫见闻 忆苏联炭疽泄漏</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852136.htm">【我来说西游】收服猪八戒</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11911910.htm">刘真装心室辅助器 医生判断：最多撑3个月</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11913612.htm">陈零九、邱锋泽跨界主持 加入《娱乐百分百》</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11915518.htm">汤唯晒三岁女儿近照 母女俩宅在家跳牛皮筋</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11913007.htm">陆影院被令复工又叫停 活下去成行业唯一目标</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11912578.htm">重装到医院惹猜疑 关晓彤：配合做例行检查</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/4/n11915640.md#1">【内幕】强令复工风险大 长春公文泄真相</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11916903.md#1">李文亮被追授“先进” 网民：先公布调查结果</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11915907.md#1">当社区感染出现后 做到这四件事很重要</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/4/n11913397.md#1">【十字路口】中共被揭造假疫情 蝗虫大军复活</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/27/n11901418.md#1">【独家】辽宁卫健委下令销毁新冠疫情文件</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/1/n11837622.md#1">家人传染如何防？抗武汉肺炎 居家隔离这样做</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/gcmla295/djy/blob/master/gb/20/3/5/n11918460.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/gcmla295/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/gcmla295/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gcmla295/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gcmla295/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gcmla295/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/1/n11356564.md#1" target="_blank">共产暴政录：三区叛乱和侵华日军攻势协调进行</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/2/n11229916.md#1" target="_blank">制止强摘人体器官 全球立法行动知多少</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943151.md#1">美专家：中国恢复正常后或爆发新一波疫情</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945355.md#1">疫情影响无法开业 山东商户吁减租遭暴力抓捕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945347.md#1">武汉小区封楼20多天 又确诊2例 居民焦虑</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11944429.md#1">【直播回放】3.16新肺炎追踪：中共瞒疫情在美挨告</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/5/n11918460.htm">1个武汉肺炎病人需多少资源？你不知的医疗消耗战</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/3/5/n11918460.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
